dataset1235/2025-2/2318198438/users/1301535012/executions/1897677159_3691284457.log
== SUBMISSION (2025-08-31 21:04:44)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/(1 + 2 + 3 + 4)
print(round(m,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 21:04:16)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/(1 + 2 + 3 + 4)
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 21:04:13)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/(1 + 2 + 3 + 4)
print(round(m,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 21:01:58)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/1 + 2 + 3 + 4
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 21:01:55)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/1 + 2 + 3 + 4
print(round(m,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 87.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 21:01:16)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/4
print(round(m,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 19.84
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 20.5
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 17.5
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 16.75
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 75.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 19.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 20:59:50)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/2
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    n4 = float(input("nota quatro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    n4 = float(input("nota quatro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    n4 = float(input("nota quatro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    n4 = float(input("nota quatro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    n4 = float(input("nota quatro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    n4 = float(input("nota quatro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 21:04:11)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/(1 + 2 + 3 + 4)
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 21:01:14)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/4
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 19.84
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 20.5
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 17.5
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 16.75
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 75.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 19.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 21:00:30)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/2
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 39.68
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 41.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 35.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 33.5
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 150.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 21:00:23)
-- CODE: 
n1 = float(input("nota um: "))
n2 = float(input("nota dois: "))
n3 = float(input("nota tres: "))
n4 = float(input("nota quatro: " ))
m = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/2
print(round(m,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
nota um: nota dois: nota tres: nota quatro: 39.68
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
nota um: nota dois: nota tres: nota quatro: 41.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 35.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
nota um: nota dois: nota tres: nota quatro: 33.5
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
nota um: nota dois: nota tres: nota quatro: 150.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
nota um: nota dois: nota tres: nota quatro: 39.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
